<resources>
    <string name="smartrate_lib_name">Smart rate</string>
    <string name="rate_us">Rate us</string>
    <string name="love_this_app">Rate</string>
    <string name="first_msg">Your rating will help us to do better.</string>
    <string name="review_1">That\'s not the experience we\'d like you to have. Please share your feedback below.</string>
    <string name="review_2">Uh oh! Could you tell us more about what we could improve?</string>
    <string name="review_3">Thanks for your Feedback, is there something specific that you think we could improve?</string>
    <string name="review_4">Thank you! your feedback inspires us to improve.</string>
    <string name="review_5">Thanks! Your awesome feedback just made our day! please rate us on Play Store.</string>
    <string name="write_feedback">Write Feedback</string>
    <string name="rate">Rate</string>
    <string name="dev">DEV</string>
    <string name="ui">UI</string>
    <string name="qa">QA</string>
    <string name="op">OP</string>
    <string name="pm">PM</string>
    <string name="no_email_client">There are no email clients installed.</string>
    <string name="write_tour_feedback_here">Write tour feedback here....</string>
    <string name="succes">Succes</string>
    <string name="thank_you">Thank you !</string>
    <string name="by_making_your_voice_heard_you_help_us_improve_our_application">By making your voice heard, you help us improve \n our application</string>
    <string name="give_feedback">Give feedback</string>
    <string name="how_can_we_improve_the_application">How can we improve the application ?</string>
    <string name="submit_feedback">Submit feedback</string>
    <string name="did_you_like_our_app">Did you like our App ?</string>
    <string name="poor">Poor</string>
    <string name="bad">Bad</string>
    <string name="average">Average</string>
    <string name="good">Good</string>
    <string name="excellent">Excellent</string>
    <string name="remind_me_later">Remind me later</string>
</resources>
