<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="bottom"
    android:clickable="true"
    android:focusable="true"
    android:gravity="bottom"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/smartrate_white"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/close_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:backgroundTint="@color/smartrate_main_color"
                    android:src="@drawable/ic_close"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    android:id="@+id/love_app"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:text="@string/did_you_like_our_app"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="5">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/rev1_img"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_margin="12dp"
                        android:src="@drawable/layer_star"/>

                    <TextView
                        android:id="@+id/rev1_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/poor"
                        android:textColor="@color/smartrate_main_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/rev2_img"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_margin="12dp"
                        android:src="@drawable/layer_star_2"/>

                    <TextView
                        android:id="@+id/rev2_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/bad"
                        android:textColor="#000000"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/rev3_img"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_margin="12dp"
                        android:src="@drawable/layer_star_3"/>

                    <TextView
                        android:id="@+id/rev3_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/average"
                        android:textColor="#000000"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/rev4_img"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_margin="12dp"
                        android:src="@drawable/layer_star_4"/>

                    <TextView
                        android:id="@+id/rev4_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/good"
                        android:textColor="#000000"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/rev5_img"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_margin="12dp"
                        android:src="@drawable/layer_star_5"/>

                    <TextView
                        android:id="@+id/rev5_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/excellent"
                        android:textColor="#000000"/>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content">


            </RelativeLayout>

            <Button
                android:id="@+id/cta_btn"
                style="@style/SmartRateButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:text="@string/rate"
                android:textSize="14sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_later"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/remind_me_later"
                android:clickable="true"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
