<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:clickable="true"
    android:focusable="true"
    android:gravity="bottom"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@android:color/transparent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="?android:colorBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"

                >

                <ImageView
                    android:id="@+id/close_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="277dp"

                    android:padding="1dp"
                    android:layout_toEndOf="@+id/succes_title"
                    android:src="@drawable/ic_close" />

                <TextView
                    android:id="@+id/succes_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:text="@string/succes"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"

                android:orientation="horizontal"
                android:weightSum="5">

                <ImageView
                    android:id="@+id/ic_succes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_succes" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/txt_succes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/thank_you"
                    android:layout_gravity="center"
                    android:textColor="#1E1F22"
                    android:textStyle="bold"
                    android:textSize="20sp"
                     />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/mssg_succes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/by_making_your_voice_heard_you_help_us_improve_our_application"
                    android:textAlignment="center"
                    android:textColor="#1E1F22"

                    android:gravity="center"
                    android:textSize="14sp"
                    />



            </LinearLayout>



        </LinearLayout>

    </LinearLayout>


</RelativeLayout>