<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:clickable="true"
    android:focusable="true"
    android:gravity="bottom"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@android:color/transparent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="?android:colorBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="20dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:id="@+id/feedback_cancel"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_close"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    />

                <TextView
                    android:id="@+id/love_app"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="-1dp"
                    android:gravity="center"
                    android:text="@string/give_feedback"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:layout_marginStart="7dp"
                android:gravity="start"
                android:orientation="horizontal">


    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/how_can_we_improve_the_application"
        android:textColor="#1E1F22"
        />


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:gravity="start"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/shipper_layout"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/feedback_message"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:textSize="14sp"
                        android:background="@drawable/bg_txt"
                        android:inputType="textMultiLine"
                        android:overScrollMode="always"
                        android:padding="15dp"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <!--                <com.google.android.material.textfield.TextInputLayout-->
<!--                    android:id="@+id/feedback_input"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="32dp"-->
<!--                    android:layout_marginTop="64dp"-->
<!--                    android:layout_marginEnd="32dp"-->
<!--                    app:boxBackgroundColor="#EFEFEF" -->
<!--                    android:visibility="gone"-->
<!--                    app:endIconMode="clear_text"-->
<!--                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--                    android:hint="Enter something"-->
<!--                    app:startIconDrawable="@drawable/ic_close"-->
<!--                    android:inputType="textMultiLine" >-->


<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:id="@+id/edit_text"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->


<!--                    />-->

<!--                </com.google.android.material.textfield.TextInputLayout>-->




            <Button
                android:id="@+id/feedback_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/round_corners_fill_gray"
                android:text="@string/submit_feedback"
                android:textColor="@color/dim"
                />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>